parmap (1.5.1)

  * Fix: pypi was not formatting the rst file due to a syntax warning

 -- Sergio Oller <sergioller@gmail.com>  Thu, 21 Sep 2017 12:40:09 +0200

parmap (1.5.0)

  * Feature: Extra map or starmap arguments given as keyword=value are
    allowed. See README.rst for examples.
  * Deprecation: The parmap arguments are now prefixed with pm_ to avoid
    conflicts with other keyword arguments passed to your functions. The
    arguments `parallel`, `chunksize`, `pool`, `processes`, `callback`,
    `error_callback` and `parmap_progress` are still valid but deprecated and
    they may be removed in a future parmap version. The `parmap_progress` is
    now `pm_pbar` and the other deprecated arguments now have `pm_` in front
    of them (e.g. `parallel` is now `pm_parallel`).
  * Feature: Add progress bar to parmap.starmap if tqdm is installed. Needs
    `pm_pbar=True`.
  * Feature: Add progress bar support when parallel=False as well. Needs
    `pm_pbar=True`.
  * Fix: parmap.starmap_async was not passing the callback properly
  * Fix: parmap.map_async and parmap.starmap_async were not returning an
    AsyncResult object when `parallel=False`.
  * Fix: async functions called without `pm_pool` are now asynchronous. However
    they should be used within a `with .. as` block to make sure the pool
    created by parmap internally is properly closed.

 -- Sergio Oller <sergioller@gmail.com>  Thu, 21 Sep 2017 12:07:09 +0200

parmap (1.4.0)

  * Feature: Add progress bar to parmap.map if tqdm is installed

 -- Sergio Oller <sergioller@gmail.com>  Wed, 19 Jul 2017 10:21:00 +0200

parmap (1.3.0)

  * Feature: Add map_async and starmap_async functions (that support multiple arguments)

 -- Sergio Oller <sergioller@gmail.com>  Mon, 30 May 2016 16:07:36 +0200

parmap (1.2.3)

  * Fix: Close pools if needed on exception. Thanks to saddy001 for reporting
    the fix.

 -- Sergio Oller <sergioller@gmail.com>  Sun, 30 Aug 2015 21:36:22 +0200

parmap (1.2.2)
